# potato_calculator

./: README.md
backend/: pyproject.toml
backend/src/potato/: calculator.py  conf.py  main.py  routes.py
