[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "potato_calculator"
version = "0.1.0"
authors = [
    {name="Yudai Yamase"}
]
description = "a web application for calculating the price of potatoes easily"
readme = "README.rst"
requires-python = ">=3.11, <4"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dotenv==1.0.1",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
]

[project.scripts]
dev = "potato.main:dev"


# [project.urls]
# "Homepage" = "https://github.com/yudai-yam/xss.web.app"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}